--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
 
 <dependencies>
 
-
 <dependency>
 
 <groupId>org.springframework.boot</groupId>
@@ -46,6 +45,32 @@
 
 </dependency>
 
+<dependency>
+
+<groupId>org.springframework.boot</groupId>
+
+<artifactId>spring-boot-starter-data-jpa</artifactId>
+
+</dependency>
+
+
+<dependency>
+
+<groupId>com.h2database</groupId>
+
+<artifactId>h2</artifactId>
+
+</dependency>
+
+<dependency>
+
+<groupId>org.flywaydb</groupId>
+
+<artifactId>flyway-core</artifactId>
+
+<version>4.1.2</version>
+
+</dependency>
 
 <dependency>
 
